--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,8 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Productivity Extension",
+  "version": "1.0.1",
+  "author": "Robert Flanagan",
+  "description": "Replace new tab screen with productivity manager.",
   "icons": [
     {
       "src": "favicon.ico",
