--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/rjflanagan95/task-extension#readme",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.5.11"
+    "mongoose": "^5.5.11",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^2.0.0"
   }
 }
