prepping for heroku deploy

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "App to manage tasks, reminders, and goals.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "repository": {
     "type": "git",
