--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^5.5.11",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
-    "react-bootstrap": "^1.0.0-beta.9"
+    "react-bootstrap": "^1.0.0-beta.9",
+    "request": "^2.88.0"
   }
 }
